<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="#F3F3F3">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="380dp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/layout_header"
            android:id="@+id/menuLayout" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                tools:ignore="UselessParent">
            <TableRow android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_gravity="center"
                      android:gravity="center">
                <ImageView
                        android:background="@drawable/layout_shadow"
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        app:srcCompat="@drawable/button_sleep"
                        android:id="@+id/sleepButton"
                        android:contentDescription="@string/button_sleep"/>
                <ImageView
                        android:background="@drawable/layout_shadow"
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        app:srcCompat="@drawable/button_calendar"
                        android:id="@+id/dateButton"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:contentDescription="@string/button_date"/>
                <ImageView
                        android:background="@drawable/layout_shadow"
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        app:srcCompat="@drawable/button_sport"
                        android:id="@+id/sportButton"
                        android:contentDescription="@string/button_sport"/>
            </TableRow>
            <TableRow android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:gravity="center"
                      android:layout_marginTop="15dp">
                <ImageView
                        android:background="@drawable/layout_shadow"
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        app:srcCompat="@drawable/button_intelligence"
                        android:id="@+id/studyButton"
                        android:contentDescription="@string/button_intelligence"/>
                <ImageView
                        android:background="@drawable/layout_shadow"
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        app:srcCompat="@drawable/button_rpg"
                        android:id="@+id/questButton"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:contentDescription="@string/button_rpg"/>
                <ImageView
                        android:background="@drawable/layout_shadow"
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        app:srcCompat="@drawable/button_metrics"
                        android:id="@+id/statsButton"
                        android:contentDescription="@string/button_metrics"/>
            </TableRow>
        </TableLayout>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:id="@+id/logLayout"
            android:background="@drawable/layout_footer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:text="Будь-яка подія 3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/notification3" android:textSize="30sp"
                        android:layout_marginStart="20dp" android:layout_marginTop="20dp"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        android:text="Якась подія 2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/notification2" android:textSize="30sp"
                        android:layout_marginTop="20dp" android:layout_marginStart="20dp"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        android:text="Подія 1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/notification1" android:textSize="30sp"
                        android:layout_marginStart="20dp" android:layout_marginTop="20dp"/>
            </TableRow>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:text="А тут ще щось..."
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/notification4" android:textSize="30sp"
                        android:layout_marginStart="20dp" android:layout_marginTop="20dp"/>
            </TableRow>
        </TableLayout>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:id="@+id/noticeLayout"
            android:gravity="center"
            android:layout_above="@+id/logLayout"
            android:layout_below="@+id/menuLayout" app:layout_constraintTop_toBottomOf="@+id/menuLayout"
            app:layout_constraintBottom_toTopOf="@+id/logLayout"
            app:layout_constraintVertical_bias="0.48" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
        <TextView
                android:text="@string/noticeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView"
                android:gravity="center|center_horizontal|center_vertical" android:textSize="24sp"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>